fix spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,8 @@ html {
 
 body {
   margin: 0px auto;
-  max-width: 800px;
+  padding: 0px 40px;
+  max-width: 850px;
   font-family: "Asap", sans-serif;
 }
 
